# privchat-protocol

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: error_code.rs  lib.rs  message.rs  notification.rs  presence.rs  protocol.rs  version.rs
src/rpc/: auth.rs  channel_broadcast.rs  device.rs  mod.rs  presence.rs  qrcode.rs  routes.rs  sticker.rs  sync.rs
src/rpc/account/: mod.rs  privacy.rs  profile.rs  search.rs  user.rs
src/rpc/channel/: direct.rs  hide.rs  mod.rs  mute.rs  pin.rs
src/rpc/contact/: blacklist.rs  friend.rs  mod.rs
src/rpc/file/: mod.rs  upload.rs
src/rpc/group/: approval.rs  group.rs  member.rs  member_mute.rs  mod.rs  qrcode.rs  role_set.rs  settings.rs  transfer.rs
src/rpc/message/: history.rs  mod.rs  reaction.rs  revoke.rs  status.rs
