[package]
name = "privchat-protocol"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]
homepage = "https://privchat.dev"
repository = "https://github.com/nicegram/privchat-protocol"
description = "Protocol library for PrivChat IM — message types, RPC routes, error codes, presence, and notifications"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }